@@ -5,9 +5,6 @@ solid won't find audio cds
 test vfat compatible file names
 processID/convertID/... eindeutig berechnen ... müsste so funktionieren
 
-check if user defines profiles get saved correctly -> lamecodecwidget
-options editor defaults to ogg
-
 ### Prio 2 ###
 
 optimize profiles
@@ -36,7 +33,7 @@ session management
 [>] musepack
 [ ] mpc123
 [>] aften
-[x] flake                               parse progress
+[x] flake
 [>] mac
 [>] shorten
 [>] tta
