@@ -12,7 +12,8 @@
 -Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
 -Fix: The options widget wasn't initialized correctly causing some crashes
 -Fix: Don't truncate text in the combo button (add files, etc.)
--Fix: Try the plugin selected by the user in the detailed tab at fist
+-Fix: Try the plugin selected by the user in the detailed tab at first
+-Fix: The options editor dialog would show wrong data
 
 0.9.91 (1.0.0 beta2):
 -Add: flac and metaflac plugins
